cilium-policies/6-deny-label/deny-same-label-policy-approach1.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "deny-same-label-traffic"
spec:
  description: "Deny traffic between pods with matching labels"
  endpointSelector:
    matchLabels:
      app: frontend
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        app: frontend
