cilium-policies/6-deny-label/deny-specific-label-policy-approach2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "deny-specific-label-alt"
spec:
  description: "Allow traffic from all pods except those with label 'green'"
  endpointSelector:
    matchLabels:
      app: red
  ingress:
  - fromEndpoints:
    - matchExpressions:
      - key: app
        operator: NotIn
        values:
        - green
